Be changable pull request format

--- a/data/default.yaml
+++ b/data/default.yaml
@@ -8,3 +8,7 @@ base_remote_branch:
   'origin/master'
 timestamp_format:
   '%Y%m%d%H%M%S'
+pull_request_body:
+  ':hamster::hamster::hamster:'
+pull_request_base:
+  'master'
