--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,1 +1,12 @@
 inherit_from: rubocop-todo.yml
+AllCops:
+  Includes:
+    - Rakefile
+    - Gemfile
+    - tachikoma.gemspec
+    - bin/**
+    - lib/**/*.rake
+  Excludes:
+    - pkg/**
+    - repos/**
+    - vendor/**
