--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rvm:
   - ruby-2.1.0-preview1
 before_install:
   - gem update bundler
-  - rvm list
+  - rvm list known
 notifications:
   email:
     - ogataken@gmail.com
