--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 rvm:
   - 1.9.3
   - 2.0.0
-  - ruby-2.1.0-preview1
+  - 2.1.0-preview1
 before_install:
   - gem update bundler
   - rvm list known
