--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ rvm:
   - 2.1.0-rc1
 before_install:
   - gem update bundler
+  - gem install json
 notifications:
   email:
     - ogataken@gmail.com
