--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,7 @@
 inherit_from: rubocop-todo.yml
 AllCops:
   Include:
-    - Rakefile
+    - '**/Rakefile'
     - Gemfile
     - tachikoma.gemspec
     - bin/**
