--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,11 +4,11 @@ AllCops:
     - '**/Rakefile'
     - Gemfile
     - tachikoma.gemspec
-    - bin/**
+    - bin/**/*
     - lib/**/*.rake
   Exclude:
-    - pkg/**
-    - repos/**
-    - vendor/**
+    - pkg/**/*
+    - repos/**/*
+    - vendor/**/*
 StringLiterals:
   EnforcedStyle: single_quotes
