--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,3 @@
-inherit_from: rubocop-todo.yml
 AllCops:
   Include:
     - '**/Rakefile'
@@ -12,3 +11,7 @@ AllCops:
     - vendor/**/*
 StringLiterals:
   EnforcedStyle: single_quotes
+LineLength:
+  Max: 120
+Blocks:
+  Enabled: false
