--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: ruby
+sudo: false
 rvm:
   - 1.9
-  - 2.0
-  - 2.1
-  - 2.2
+  - 2.0.0
+  - 2.1.10
+  - 2.2.5
+  - 2.3.1
 before_install:
   - gem update bundler
 notifications:
