--- a/lib/tachikoma/templates/data/bot-motoko-tachikoma.yaml
+++ b/lib/tachikoma/templates/data/bot-motoko-tachikoma.yaml
@@ -60,7 +60,7 @@ url: 'https://github.com/sanemat/bot-motoko-tachikoma.git'
 #
 # Use an SSH key and passphrase from account.
 #
-ssh: 'git@github.com:sanemat/bot-motoko-tachikoma.gi'
+ssh: 'git@github.com:sanemat/bot-motoko-tachikoma.git'
 #
 # For ruby bundler parallel install option
 # Require Bundler v1.4.0 or higher
